# AiBattle

./: CMakeLists.txt  README.md  fips.yml
AI1/: .gitignore  AICore1.py  aiTypes.py  architectManager1.py  attackPriorityList1.py  combatManager1.py  exploreManager1.py  main1.py  main1q.py  npcFSM1.py  npcStates1.py  overseer1.py  overseerStates1.py  queueFSM1.py  resourceManager1.py  test.json  unitManager1.py
AI2/: AICore2.py  BaseGameEntity2.py  Building2.py  BuildingManager2.py  Config2.py  Craftsman2.py  Enemy2.py  EntityManager2.py  Explorer2.py  Pos2.py  Resource2.py  ResourceManager2.py  Soldier2.py  State2.py  StrategyManager2.py  Worker2.py  main2.py  variables.json
Documentations/: AI grupp 1 - Dokumentation.docx  DataContainerSingleton.docx  PyBind_Documentation.docx
code/ECS/: Attribute.h  BaseComponent.h  CMakeLists.txt  ECSUtil.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  IdentifierPool.h  Message.h
code/Game/: CMakeLists.txt  DataContainerSingleton.h  Game.cpp  Game.h  PyBind.h  PyConsole.h
code/Game/Assets/: skybox.dds  variables.json  variablesFaster.json  variablesFastest.json  variablesOriginal.json
code/Game/Components/: Build.h  BuildBuilding.h  BuildingSiteComponent.h  Craftsman.h  Create.h  CreateItem.h  Discoverable.h  Explorer.h  HealthComponent.cpp  HealthComponent.h  InventoryComponent.cpp  InventoryComponent.h  IronOreComponent.h  KilnComponent.h  LevelVisitor.h  MineChop.h  PathFollower.cpp  PathFollower.h  Progress.h  ShapeRenderer.cpp  ShapeRenderer.h  SmelterComponent.h  SmithyComponent.h  Soldier.h  TaskPlanner.h  TeamTag.h  TrainingCampComponent.h  TransformComponent.cpp  TransformComponent.h  TreeComponent.h  Upgrading.h  Worker.h
code/Game/Messages/: Abort.h  Attack.h  AttackCooldown.h  Deposit.h  DiscoverySet.h  EntityRemove.h  Heal.h  PathArrive.h  PathCancel.h  ProgressMsg.h  TileChange.h  UpgradeComplete.h
code/Game/Shaders/: shaders.shd
code/Game/World/: AICore.h  Level.cpp  Level.h  MessageDispatcher.cpp  MessageDispatcher.h  PathPlanner.cpp  PathPlanner.h  ShapeServer.cpp  ShapeServer.h  Skybox.h  Tile.cpp  Tile.h
